<resources>
    <string name="app_name">Fall_Detector_v2</string>
    <string name="home_page_title">Fall-E</string>
    <string name="settings">Settings</string>
    <string name="content_description_settings">Changes User Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="content_description_bluetooth">Configure Bluetooth</string>
    <string name="about">About Us</string>
    <string name="home_page">Home</string>
    <string name="history_log">History Log</string>
    <string name="profile_page">Profile Page</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm-Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="serivce_desc">This is Service background tasks</string>
</resources>