<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add_contact"
        android:title="Add Contact"
        android:icon="@drawable/add_friend"
        android:contentDescription="Add Contacts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"
        android:contentDescription="@string/content_description_settings"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/subMenu_bluetooth"
                android:title="@string/bluetooth"
                android:contentDescription="@string/content_description_bluetooth"
                app:showAsAction="never"/>
            <item
                android:id="@+id/subMenu_about"
                android:title="@string/about"
                app:showAsAction="never"/>
            <item
                android:id="@+id/subMenu_logOut"
                android:title="@string/log_out"
                app:showAsAction="never"/>
        </menu>
    </item>
</menu>